tests/ok/enums.mon
{
    Status: #enum { Active, Inactive, Pending },
    current_status: $Status.Active,
    previous_status: $Status.Inactive
}
