tests/bad/enum_undefined_variant.mon
{
    Status: #enum { Active, Inactive },

    current_status: $Status.Unknown, // Invalid: 'Unknown' is not a valid variant
}
